crates/vexor-compiler/tests/golden/error/output/duplicate.err
Error: evaluation error
   ╭─[ input:3:1 ]
   │
 3 │ val r = 200
   │ ─────┬─────  
   │      ╰─────── `r` already exists in scope
───╯
